下線を作る

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -19,6 +19,10 @@
   /* --z-index-modal: 200; */
 }
 
+:root {
+  --width-100: 100%;
+}
+
 body {
   color: var(--black-color);
   font-size: 16px;
@@ -372,18 +376,16 @@ span {
   display: inline-block;
 }
 
-.about_strength_desc::after {
-  content: "";
-  position: absolute;
-  background-color: var(--accent-color);
-  width: 100%;
-  height: 10px;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-3deg);
-  -webkit-transform: translate(-50%, -50%) rotate(-3deg);
-  -ms-transform: translate(-50%, -50%) rotate(-3deg);
-  z-index: var(--z-index-back);
+.about_strength_desc_maker {
+  padding-bottom: 10px;
+  background-image: linear-gradient(
+    -3deg,
+    transparent 50%,
+    var(--accent-color) 50%,
+    var(--accent-color) calc(50% + 10px),
+    transparent calc(50% + 10px)
+  );
+  background-position-y: 15px;
 }
 
 .about_strength_txt {
